@@ -89,6 +89,7 @@ static const char *pages[]=
 	"ISO-8859-7 (Greek)",
 	"ISO-8859-9 (Turkish)",
 	"CP1256 (Arabic)",
+	"GB18030 (Chinese)",
 	"KOI8-R (Cyrillic)",
 	"SJIS (Japanese)",
 	NULL
